[package]
name = "serde_tagged"
version = "0.1.0"
authors = ["qzed <qzed@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1.0.27"
erased-serde = { version = "0.3.3", optional = true }

[dev-dependencies]
serde_derive = "1.0.27"
serde_bytes = "0.10.3"
serde_json = "1.0.10"
serde-value = "0.5.1"
lazy_static = "1.0.0"
downcast-rs = "1.0.0"

[features]
default = ["erased"]
erased = ["erased-serde"]
