[package]
name = "serde_tagged"
version = "0.1.0"
authors = ["qzed <qzed@users.noreply.github.com>"]
description = "Tag values during serialization, retreive tags during deserialization."
repository = "https://github.com/qzed/serde_tagged"
readme = "README.md"
keywords = ["serde", "trait-objects", "serialization", "deserialization"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"

[badges]
travis-ci = { repository = "qzed/serde_tagged", branch = "master" }
codecov = { repository = "qzed/serde_tagged", branch = "master", service = "github" }

[dependencies]
serde = "1.0.27"
erased-serde = { version = "0.3.3", optional = true }

[dev-dependencies]
serde_derive = "1.0.27"
serde_bytes = "0.10.3"
serde_json = "1.0.10"
serde-value = "0.5.1"
lazy_static = "1.0.0"
downcast-rs = "1.0.0"

[features]
default = ["erased"]
erased = ["erased-serde"]
