[package]
name = "serde_tagged"
version = "0.2.0"
authors = ["qzed <qzed@users.noreply.github.com>"]
description = "Tag values during serialization, retreive tags during deserialization."
documentation = "https://docs.rs/serde_tagged"
repository = "https://github.com/qzed/serde_tagged"
readme = "README.md"
keywords = ["serde", "trait-objects", "serialization", "deserialization"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"

[badges]
travis-ci = { repository = "qzed/serde_tagged", branch = "master" }
codecov = { repository = "qzed/serde_tagged", branch = "master", service = "github" }

[dependencies]
serde = "1.0.193"
erased-serde = { version = "0.4.1", optional = true }

[dev-dependencies]
serde_derive = "1.0.193"
serde_bytes = "0.11.13"
serde_json = "1.0.108"
serde-value = "0.7.0"
lazy_static = "1.4.0"
downcast-rs = "1.2.0"

[features]
default = ["erased"]
erased = ["erased-serde"]
